tsk-21: Disable registration (#27)
Closes #21

Reviewed-on: https://git.kundeng.us/phoenix/textsender-auth/pulls/27
Co-committed-by: phoenix <kundeng00@pm.me>
