# docs/swagger.yaml
@@ -171,6 +171,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/handler.RegisterResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handler.RegisterResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -229,6 +233,10 @@ paths:
             $ref: '#/definitions/handler.ServiceCreationResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ServiceCreationResponse'
+        "403":
+          description: Forbidden
           schema:
             $ref: '#/definitions/handler.ServiceCreationResponse'
         "500":
